--- a/public/admin/css/modal.css
+++ b/public/admin/css/modal.css
@@ -26,7 +26,7 @@
 
 /* Conteúdo da modal */
 .modal-content {
-    background-color: rgba(247, 247, 247, 0.9);
+    background-color: rgba(34, 33, 35, 0.9);
     color: white;
     padding: 20px;
     border-radius: 8px;
@@ -34,26 +34,7 @@
     text-align: center;
     max-width: 400px;
     width: 90%;
-    position: relative
-}
-
-.modal-content #modal-text{
-    color: rgb(26, 26, 27);
-}
-
-.modal-content #modal-name, #modal-tel{
-    font-size: 130%;
-    color: rgb(26, 26, 27);
-}
-
-.modal-content .lable-text em{
-    margin: 0px;
-    font-size: 130%;
-    color: rgb(138, 138, 138)
-}
-
-.modal-content .lable-text{
-    margin: 0px;
+    position: relative;
 }
 
 /* Botão de fechar */
@@ -61,9 +42,9 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    font-size: 30px;
+    font-size: 24px;
     cursor: pointer;
-    color: #606060;
+    color: #ccc;
 }
 
 .close:hover {
