--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -20,6 +20,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-y: scroll;
 }
 
 #central-box {
