geral funcionando pt2

--- a/public/admin/css/modal.css
+++ b/public/admin/css/modal.css
@@ -1,56 +1,121 @@
 @import url('https://fonts.googleapis.com/css2?family=Podkova:wght@400..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
 
-*{
+* {
     font-family: 'Podkova';
 }
 
-/* Fundo escurecido */
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fundo escuro semitransparente */
+    background-color: aliceblue;
+    border-radius: 10px;
+    border: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
-    backdrop-filter: blur(5px); /* Aplica o desfoque no fundo */
+    width: 28%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
 }
 
-/* Esconde a modal */
-.modal.hidden {
-    display: none;
+.modal h2 {
+    color: rgb(31, 31, 31);
+    font-size: 170%;
 }
 
-/* Conteúdo da modal */
-.modal-content {
-    background-color: rgba(34, 33, 35, 0.9);
-    color: white;
-    padding: 20px;
+#modal-escolha {
+    visibility: hidden;
+    opacity: 0;
+}
+
+#modal-escolha button {
+    width: 200px;
+    height: 60px;
+    border: none;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    max-width: 400px;
-    width: 90%;
-    position: relative;
+    background-color: rgb(31, 31, 31);
+    margin-bottom: 10px;
+    font-size: 100%;
+    transition: 0.2s;
 }
 
-/* Botão de fechar */
-.close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 24px;
-    cursor: pointer;
-    color: #ccc;
+#modal-escolha button:hover {
+    background-color: rgb(226, 230, 231);
+    color: rgb(31, 31, 31);
+    font-weight: 200;
+    transition: 0.2s;
 }
 
-.close:hover {
-    color: white;
+#modal-cadastro-novo {
+    visibility: hidden;
+    opacity: 0;
 }
 
-.lable{
-    color: rgb(124, 124, 124);
+#modal-cadastro-novo form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+#modal-cadastro-novo form label{
+    color: rgb(31, 31, 31);
+}
+
+#modal-cadastro-novo form input{
+    width: 250px;
+    height: 30px;
+    color: rgb(31, 31, 31);
+    font-size: 100%;
+    border: none;
+    background-color: rgb(221, 226, 230);
+    padding-left: 5px;
+}
+
+#modal-cadastro-existente {
+    visibility: hidden;
+    opacity: 0;
+}
+
+#modal-cadastro-existente form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+#modal-cadastro-existente form label{
+    color: rgb(31, 31, 31);
+}
+
+#modal-cadastro-existente form input{
+    width: 250px;
+    height: 30px;
+    color: rgb(31, 31, 31);
+    font-size: 100%;
+    border: none;
+    background-color: rgb(221, 226, 230);
+    padding-left: 5px;
+}
+
+button[type="submit"]{
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 8px;
+    background-color: rgb(31, 31, 31);
+    margin-bottom: 10px;
+    font-size: 100%;
+    transition: 0.2s;
+}
+
+button[type="submit"]:hover{
+    background-color: rgb(226, 230, 231);
+    color: rgb(31, 31, 31);
+    font-weight: 200;
+    transition: 0.2s;
 }
