--- a/public/css/modal-adm.css
+++ b/public/css/modal-adm.css
@@ -88,8 +88,6 @@
     transition: 0.2s;
 }
 
-#modal-cadastro-novo {}
-
 #modal-cadastro-novo form {
     display: flex;
     flex-direction: column;
@@ -182,4 +180,40 @@ button:hover {
     background-color: rgb(148, 148, 148);
     color: rgb(31, 31, 31);
     font-weight: 200;
+}
+
+#login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+#login-form label{
+    color: rgb(31, 31, 31);
+}
+
+#login-form input{
+    width: 100%;
+    height: 30px;
+    color: rgb(31, 31, 31);
+    font-size: 100%;
+    border: none;
+    background-color: rgb(163, 166, 168);
+    padding-left: 5px;
+}
+
+#deslogar{
+    background-color: aliceblue;
+    color: rgb(31, 31, 31);
+    transition: 0.2s;
+}
+
+#deslogar:hover{
+    background-color: rgb(31, 31, 31);
+    color: aliceblue;
+    transition: 0.2s;
 }
