--- a/public/css/style-adm.css
+++ b/public/css/style-adm.css
@@ -11,7 +11,7 @@ html, body {
 }
 
 body {
-    background-image: url('../images/background.png');
+    background-image: url('../../images/background.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
